--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
-    "discord.js": "^11.5.1",
+    "discord-api-types": "^0.7.0",
+    "discord.js": "^12.4.1",
     "jest": "24.7.1",
     "prettier": "1.17.0",
     "supertest": "4.0.2",
@@ -42,7 +43,7 @@
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "3.4.3"
+    "typescript": "^4.0.5"
   },
   "jest": {
     "moduleFileExtensions": [
