--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "0.0.2",
     "@nestjs/common": "^6.10.14",
     "@nestjs/config": "^0.1.0",
     "@nestjs/core": "^6.10.14",
